--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "peacemakr.io website",
   "main": "index.js",
   "scripts": {
-    "clean": "rm -rf ./.cache ./dist",
+    "clean": "rm -rf ./.cache ./localdev",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npm run clean && parcel src/index.html",
-    "build": "npm run clean && parcel build src/index.html"
+    "start": "npm run clean && parcel -d ./localdev src/index.html --public-url /",
+    "build": "npm run clean && parcel build -d ./prod src/index.html --public-url /"
   },
   "author": "",
   "license": "ISC",
