--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "clean-prod": "rm -rf ./.cache ./docs",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npm run clean-localdev && parcel -d ./localdev src/index.html --public-url /",
-    "build": "npm run clean-prod && parcel build -d ./docs src/index.html --public-url / && cp CNAME favicon.ico ./docs"
+    "build": "npm run clean-prod && parcel build -d ./docs src/index.html --global navbar.js --public-url / && cp CNAME favicon.ico ./docs"
   },
   "author": "",
   "license": "ISC",
