--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@tailwindcss/typography": "^0.4.0",
     "autoprefixer": "^9.8.6",
     "postcss": "^7.0.35",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2"
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
+    "tailwindcss-aspect-ratio": "latest"
   },
   "devDependencies": {
     "parcel-bundler": "latest",
