--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,7 @@
-node_modules
+node_modules/
 *.DS_Store
 .cache
-/gulp-pre-build/
+gulp-pre-build/
 parcel-debug*
-/localdev/
-/dist/
-/docs/
+localdev/
+dist/
